# Roofbolt-Detection

./: .README.md.swp  .gitignore  README.md
dataset/: bunny_cloud_downsamp.pcd
filtering/: CMakeLists.txt
filtering/src/: main_filter.cpp  read_pcd.cpp
resample/: CMakeLists.txt
resample/src/: main_resample.cpp
